<resources>
    <string name="app_name">EaMo</string>
    <string name="login">Login</string>
    <string name="type_your_email">Type your Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="or">or</string>
    <string name="phone_no">Phone No.</string>
    <string name="type_your_phone_no">Type your Phone no.</string>
    <string name="have_a_account">Have a Account?</string>
    <string name="type_your_confirm_password">Type your Confirm Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="type_your_name">Type your Name</string>
    <string name="home">Home</string>
    <string name="our_partner">Our Partner</string>
    <string name="link_generate">Link Generate</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_earning">My Earning</string>
    <string name="withdraw">Withdraw</string>
    <string name="store">Store</string>
    <string name="make_links">Make Links</string>
    <string name="my_account">My Account</string>
    <string name="join_telegram_group">Join Telegram Group</string>
    <string name="logout">Logout</string>
    <string name="input_link">Input Link</string>
    <string name="convert">Convert</string>
    <string name="hint">(Copy and paste the link here to convert. E.g,https://www.flipkart.com)</string>
    <string name="convert_text">Convert Text</string>
    <string name="partner_store">Partner Store</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_opt_sent_to">Enter the OPT sent to</string>
    <string name="verify">Verify</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="your_email">Your Email</string>
    <string name="save_details">Save Details</string>
    <string name="total_earning">Total Earning</string>
    <string name="upi_id">UPI ID</string>
    <string name="bank_detail">Bank Detail</string>
    <string name="enter_upi_id">Enter UPI ID / Number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="bank_holder_name">Bank Holder Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_no">Account No.</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="share">Share</string>
    <string name="post">Post</string>
    <string name="clear">Clear</string>
</resources>