<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home_bar"
        android:title="@string/home"
        android:icon="@drawable/icon_home"
        android:color="#00ACDF"/>

    <item
        android:id="@+id/partner_bar"
        android:title="@string/our_partner"
        android:icon="@drawable/icon_handshake"
        android:color="#00ACDF"/>

    <item
        android:id="@+id/linkConvert_bar"
        android:title="@string/link_generate"
        android:icon="@drawable/icon_link_generate"
        android:color="#00ACDF"/>

    <item
        android:id="@+id/profile_bar"
        android:title="@string/profile"
        android:icon="@drawable/icon_person"
        android:color="#00ACDF"/>

</menu>