<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Starting_Activity.SignUp">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:id="@+id/textView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/sign_up"
           android:textColor="@color/black"
           android:textSize="@dimen/_40ssp"
           android:textStyle="bold"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.498"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintVertical_bias="0.0" />

       <TextView
           android:id="@+id/textView7"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:text="@string/name"
           android:textSize="@dimen/_18ssp"
           android:textStyle="bold"
           app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
           app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
           app:layout_constraintTop_toBottomOf="@+id/textView3"
           app:layout_constraintVertical_bias="0.93" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout5"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="30dp"
           android:layout_marginEnd="30dp"
           android:hint="@string/type_your_name"
           app:boxCornerRadiusBottomEnd="10dp"
           app:boxCornerRadiusBottomStart="10dp"
           app:boxCornerRadiusTopEnd="10dp"
           app:boxCornerRadiusTopStart="10dp"
           app:hintTextColor="@color/hint_text"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textView3"
           app:layout_constraintVertical_bias="0.06999999"
           app:startIconCheckable="true"
           app:startIconDrawable="@drawable/icon_person">

           <com.google.android.material.textfield.MaterialAutoCompleteTextView
               android:id="@+id/email_signUp_edtv"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="25"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>

       <TextView
           android:id="@+id/textView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:text="@string/email"
           android:textSize="@dimen/_18ssp"
           android:textStyle="bold"
           app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
           app:layout_constraintStart_toStartOf="@+id/textInputLayout"
           app:layout_constraintTop_toBottomOf="@+id/textView7"
           app:layout_constraintVertical_bias="0.93" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="30dp"
           android:layout_marginTop="40dp"
           android:layout_marginEnd="30dp"
           android:hint="@string/type_your_email"
           app:boxCornerRadiusBottomEnd="10dp"
           app:boxCornerRadiusBottomStart="10dp"
           app:boxCornerRadiusTopEnd="10dp"
           app:boxCornerRadiusTopStart="10dp"
           app:hintTextColor="@color/hint_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
           app:startIconCheckable="true"
           app:startIconDrawable="@drawable/icon_outline_email">

           <com.google.android.material.textfield.MaterialAutoCompleteTextView
               android:id="@+id/name_signUp_edtv"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="25"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>


       <TextView
           android:id="@+id/textView6"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:text="@string/phone_no"
           android:textSize="@dimen/_18ssp"
           android:textStyle="bold"
           app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
           app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
           app:layout_constraintVertical_bias="0.93" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout3"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="30dp"
           android:layout_marginTop="40dp"
           android:layout_marginEnd="30dp"
           android:hint="@string/type_your_phone_no"
           app:boxCornerRadiusBottomEnd="10dp"
           app:boxCornerRadiusBottomStart="10dp"
           app:boxCornerRadiusTopEnd="10dp"
           app:boxCornerRadiusTopStart="10dp"
           app:hintTextColor="@color/hint_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
           app:startIconDrawable="@drawable/icon_outline_phone">

           <com.google.android.material.textfield.MaterialAutoCompleteTextView
               android:id="@+id/phone_signup_edtv"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="phone"
               android:maxLength="10"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>


       <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:text="@string/password"
           android:textSize="@dimen/_18ssp"
           android:textStyle="bold"
           app:layout_constraintBottom_toTopOf="@+id/textInputLayout1"
           app:layout_constraintStart_toStartOf="@+id/textInputLayout1"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
           app:layout_constraintVertical_bias="0.93" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout1"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="30dp"
           android:layout_marginTop="40dp"
           android:layout_marginEnd="30dp"
           android:hint="@string/type_your_password"
           app:boxCornerRadiusBottomEnd="10dp"
           app:boxCornerRadiusBottomStart="10dp"
           app:boxCornerRadiusTopEnd="10dp"
           app:boxCornerRadiusTopStart="10dp"
           app:hintTextColor="@color/hint_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
           app:startIconDrawable="@drawable/icon_password">

           <com.google.android.material.textfield.MaterialAutoCompleteTextView
               android:id="@+id/password_signup_edtv"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPassword"
               android:maxLength="15"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>

       <TextView
           android:id="@+id/textView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:text="@string/confirm_password"
           android:textSize="@dimen/_18ssp"
           android:textStyle="bold"
           app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
           app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
           app:layout_constraintVertical_bias="0.93" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout2"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="30dp"
           android:layout_marginTop="40dp"
           android:layout_marginEnd="30dp"
           android:hint="@string/type_your_confirm_password"
           app:boxCornerRadiusBottomEnd="10dp"
           app:boxCornerRadiusBottomStart="10dp"
           app:boxCornerRadiusTopEnd="10dp"
           app:boxCornerRadiusTopStart="10dp"
           app:hintTextColor="@color/hint_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
           app:startIconDrawable="@drawable/icon_password">

           <com.google.android.material.textfield.MaterialAutoCompleteTextView
               android:id="@+id/confirn_password_signup_edtv"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPassword"
               android:maxLength="15"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>

       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/signUp_btn"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="30dp"
           android:layout_marginTop="30dp"
           android:layout_marginEnd="30dp"
           android:background="@drawable/btn_login"
           android:padding="13dp"
           android:text="@string/sign_up"
           android:textColor="@color/white"
           android:textSize="@dimen/_15ssp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
           app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
           app:layout_constraintVertical_bias="0.13" />

       <TextView
           android:id="@+id/textView4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/or"
           android:textColor="@color/black"
           android:textSize="@dimen/_15ssp"
           android:textStyle="bold"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="@+id/signUp_btn"
           app:layout_constraintStart_toStartOf="@+id/signUp_btn"
           app:layout_constraintTop_toBottomOf="@+id/signUp_btn"
           app:layout_constraintVertical_bias="0.060000002" />

       <TextView
           android:id="@+id/textView5"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/have_a_account"
           android:textColor="@color/black"
           android:textSize="@dimen/_15ssp"
           android:textStyle="bold"

           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="@+id/textView4"
           app:layout_constraintEnd_toStartOf="@+id/btn_login"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintHorizontal_chainStyle="packed"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textView4"
           app:layout_constraintVertical_bias="0.13" />

       <TextView
           android:id="@+id/btn_login"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="2dp"
           android:text="@string/login"
           android:textColor="@color/primary_color"
           android:textSize="@dimen/_15ssp"
           android:textStyle="bold"
           app:layout_constraintBottom_toBottomOf="@+id/textView5"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toEndOf="@+id/textView5"
           app:layout_constraintTop_toTopOf="@+id/textView5" />
   </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>