<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.BankDetail">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank_detail"
        android:textColor="@color/profile_txtcolor"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/bank_holder_name"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:expandedHintEnabled="false"
        app:hintTextColor="@color/hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        app:layout_constraintVertical_chainStyle="spread"
        app:startIconDrawable="@drawable/icon_person">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/bank_holde_name_edtv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/bank_name"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:expandedHintEnabled="false"
        app:hintTextColor="@color/hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
        app:startIconDrawable="@drawable/icon_bank">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/bank_name_edtv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/account_no"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:expandedHintEnabled="false"
        app:hintTextColor="@color/hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout11"
        app:startIconDrawable="@drawable/icon_bank">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/bank_account_number_edtv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/ifsc_code"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:expandedHintEnabled="false"
        app:hintTextColor="@color/hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout12"
        app:startIconDrawable="@drawable/icon_bank">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/bank_ifsc_code_edtv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/enter_amount"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:expandedHintEnabled="false"
        app:hintTextColor="@color/hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout13"
        app:startIconDrawable="@drawable/icon_rupee">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/amount_edtv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/withdraw_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/ctm_earning"
        android:padding="13dp"
        android:text="@string/withdraw"
        android:textColor="@color/profile_txtcolor"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />


</androidx.constraintlayout.widget.ConstraintLayout>